✨ new design, improved blog readability and updated info card along with other fixes for tailwind v4

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -14,29 +14,36 @@
     margin-bottom: 0.7em;
 }
 
+@media (min-width: 640px) {
+    .blog-content-block > * {
+        margin-top: 1.25em;
+        margin-bottom: 1.25em;
+    }
+}
+
 .blog-content-block h1 {
-    @apply text-cyan-300 text-2xl sm:text-3xl md:text-3xl font-bold;
+    @apply text-blue-300 text-2xl sm:text-2xl font-bold;
 }
 .blog-content-block h2 {
-    @apply text-xl sm:text-2xl md:text-2xl font-semibold text-cyan-400;
+    @apply text-xl sm:text-xl font-semibold text-blue-400;
 }
 .blog-content-block h3 {
-    @apply text-lg sm:text-xl md:text-xl font-semibold text-green-600;
+    @apply text-lg sm:text-lg font-semibold text-purple-400;
 }
 .blog-content-block h4 {
-    @apply text-base sm:text-lg md:text-lg font-semibold text-indigo-300;
+    @apply text-base sm:text-base font-semibold text-purple-300;
 }
 .blog-content-block h5 {
-    @apply text-sm sm:text-base md:text-base font-semibold text-yellow-600;
+    @apply text-sm sm:text-sm font-semibold text-slate-300;
 }
 .blog-content-block h6 {
-    @apply text-xs sm:text-sm md:text-sm font-semibold text-gray-600;
+    @apply text-sm font-semibold text-slate-400;
 }
 .blog-content-block p {
-    @apply text-base sm:text-lg md:text-lg;
+    @apply text-base sm:text-base text-slate-300 leading-relaxed;
 }
 .blog-content-block a {
-    @apply text-blue-500 underline;
+    @apply text-blue-400 hover:text-blue-300 underline;
 }
 .blog-content-block blockquote {
     @apply border-l-4 pl-4 py-2 italic my-4;
@@ -60,7 +67,7 @@
     list-style-type: lower-alpha;
 }
 .blog-content-block li {
-    @apply my-1;
+    @apply my-1 text-slate-300;
 }
 .blog-content-block hr {
     @apply border-t-2 border-gray-700 my-6;
@@ -85,10 +92,10 @@
     transition: background 0.2s;
 }
 .blog-content-block strong {
-    @apply font-bold text-red-400;
+    @apply font-bold text-purple-300;
 }
 .blog-content-block em {
-    @apply italic text-blue-400;
+    @apply italic text-blue-300;
 }
 .blog-content-block sub {
     @apply align-sub;
